# cuta

./: CMakeLists.txt  README.md
include/cuta/: cutensor_utils.hpp  reshape.hpp  utils.hpp
include/cutt/: cutensor_utils.hpp  reshape.hpp  utils.hpp
src/: reshape.cu  utils.hpp
test/: cutensor_test.cu  mode_test.cpp  permutation_test.cu  reshape_test.cu
